[package]
name = "mxg"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ansi_term = "0.12.1"


[features]
default = ["buffer"]
full = ["info"]

# Info Message
info= []

# Buffer
buffer= []

# Without the Buffer, the Drop is implemented
buffless= []

